@@ -1,3 +1,14 @@
+Thu Mar 19 19:49:40 UTC 2009  Steven Stallion  <stallions@ociweb.com>
+
+        * dds/DCPS/GuidBuilder.h:
+        * dds/DCPS/GuidBuilder.inl:
+        * dds/DCPS/GuidBuilder.cpp:
+        * dds/DCPS/RepoIdBuilder.h:
+        * dds/DCPS/RepoIdBuilder.inl:
+        * dds/DCPS/RepoIdBuilder.cpp:
+
+          Cleaned up inlines.
+
 Thu Mar 19 13:45:03 UTC 2009  Steven Stallion  <stallions@ociweb.com>
 
         * dds/DCPS/GuidBuilder.h:
